--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </div>
 
     <div class="above-game">
+      <a class="back-button">Back</a>
       <a class="restart-button">New Game</a>
     </div>
 
